@@ -73,7 +73,7 @@ class FilesCheck
 		$this->date = $date;
 
 		// Retrieve the date and version from the #__extensions table
-		$db = JFactory::getDbo();
+		$db = \JFactory::getDbo();
 		$query = $db->getQuery(true)->select('*')->from($db->qn('#__extensions'))
 			->where($db->qn('element') . ' = ' . $db->q($this->option))
 			->where($db->qn('type') . ' = ' . $db->q('component'));
